--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,39 @@ h1, h2, h3, p {
 }
 
 .contacts {
+	position: relative;
 	float: left;
 	width: 556px;
+}
+
+.phone {
+	padding-left: 15px; 
+}
+
+.email {
+	padding-left: 40px; 
+}
+
+.phone:before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 8px;
+  height: 13px;
+  transform: translateY(-50%);
+ 	background: url("../img/spritesheet.png") no-repeat -116px -26px;
+}
+
+.email:before {
+	content: "";
+	position: absolute;
+	left: 120px;
+	top: 50%;
+	width: 16px;
+  height: 11px;
+  transform: translateY(-50%);
+ 	background: url("../img/spritesheet.png") no-repeat -97px -5px;
 }
 
 .top-nav {
@@ -61,21 +92,22 @@ h1, h2, h3, p {
 .header-bottom {
 	padding: 55px 0;	
 	font-size: 0;
+	color: #463f3a;
 	background-color: #f8f8f8;
 }
 
 .logo {	
+	position: relative;
 	display: inline-block;
 	vertical-align: middle;
 	width: 260px;
-	margin-right: 40px;
-	text-transform: uppercase;
-	color: #454545;
+	margin-right: 40px;	
+	text-transform: uppercase;	
 }
 
 .company-name {
 	font-size: 48px;
-	line-height: 53px;
+	line-height: 43px;
 	font-weight: 900;	
 }
 
@@ -83,6 +115,16 @@ h1, h2, h3, p {
 	font-family: "Arial", sans-serif;
 	font-size: 15px;
 	line-height: 22px;
+}
+
+.logo:after {
+	content: "";
+	position: absolute;
+	width: 21px;
+  height: 52px;
+  top: 4px;
+	left: 195px;
+	background: url("../img/spritesheet.png") no-repeat -35px -5px;
 }
 
 .bottom-nav {	
@@ -93,7 +135,7 @@ h1, h2, h3, p {
 	text-align: center;
 }
 
-.bottom-nav a {
+.menu-item  {
 	position: relative;
 	margin-right: 46px;
 	font-size: 18px;
@@ -104,7 +146,7 @@ h1, h2, h3, p {
 	color: #454545;
 }
 
-.bottom-nav a:after {
+.menu-item:after {
 	position: absolute;
 	left: -25px;
 	bottom: 2px;
@@ -115,14 +157,16 @@ h1, h2, h3, p {
 	transform: rotate(20deg);
 }
 
-.bottom-nav a:first-child:after {
+.menu-item:first-child:after {
 	background-color: transparent;
 }
 
 .cart {
+	position: relative;
 	display: inline-block;
 	vertical-align: middle;
-	width: 122px;
+	width: 112px;
+	/*padding-left: 10px;*/
 	font-size: 16px;
 	line-height: 25px;
 	font-weight: 500;
@@ -131,6 +175,17 @@ h1, h2, h3, p {
 
 .items-count {
 	display: block;	
+}
+
+.cart:after {
+	content: "";
+	position: absolute;
+	width: 37px;
+  height: 32px;
+  top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+	background: url("../img/spritesheet.png") no-repeat -5px -67px;
 }
 
 .section {
@@ -185,6 +240,7 @@ h1, h2, h3, p {
 	line-height: 40px;
 	font-weight: 700;
 	text-transform: uppercase;
+	color: #463f3a;
 }
 
 .red-mark {
@@ -233,6 +289,7 @@ h1, h2, h3, p {
 	z-index: 2;
 	padding: 0 12px;
 	background-color: #f5f6f1;
+	color: #463f3a;
 }
 
 .shoes-categories-list {
@@ -272,7 +329,7 @@ h1, h2, h3, p {
 	line-height: 37px;	
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #000000;
+	color: #463f3a;
 }
 
 .shoes-categories-text {
@@ -282,6 +339,7 @@ h1, h2, h3, p {
 .shoes-categories-link {
 	font-size: 20px;
 	line-height: 42px;
+	font-weight: 700;
 	text-decoration: none;
 }
 
@@ -364,6 +422,102 @@ h1, h2, h3, p {
 
 .featured-list {
 	font-size: 0;
+}
+
+.latest-posts {
+	padding-bottom: 90px;
+}
+
+.latest-posts .section-title {
+	background-color: #ffffff;
+}
+
+.posts-list {
+	font-size: 0;
+}
+
+.post-item {
+	display: inline-block;
+	vertical-align: top;
+	width: 373px;
+	margin-right: 30px;
+	font-size: 16px;
+	line-height: 24px;
+}
+
+.post-item:last-child {
+	margin-right: 0;
+}
+
+.post-image {
+	margin-bottom: 11px;
+}
+
+.post-title {
+	margin-bottom: 11px;
+	font-size: 18px;
+	line-height: 24px;
+	font-weight: 700;
+}
+
+.post-text {
+	margin-bottom: 11px;
+}
+
+.post-link {	
+	font-weight: 700;
+	text-decoration: none;
+}
+
+.slogan {
+	padding: 40px 0;
+	text-align: center;
+	background-color: #f2f2f0;
+}
+
+.slogan-title {
+	margin-bottom: 11px;
+	font-family: "Oswald", "Arial", sans-serif;
+	font-size: 36px;
+	line-height: 42px;
+	text-transform: uppercase;	
+	color: #463f3a;
+}
+
+.slogan-text {	
+	font-size: 16px;
+	line-height: 23px;	
+}
+
+.slogan-link {
+	text-decoration: none;
+}
+
+.top-footer {
+	padding: 55px 0;	
+	font-size: 0;	
+	color: #ffffff;
+	background-color: #463f3a;
+}
+
+.top-footer .logo:after {
+	top: 4px;
+	left: 195px;	
+	background: url("../img/spritesheet.png") no-repeat -66px -5px;
+}
+
+.top-footer .menu-item {
+	color: #ffffff;
+}
+
+.top-footer nav {
+	margin-bottom: 15px;
+}
+
+.copyright {
+	font-size: 14px;
+	line-height: 21px;
+	letter-spacing: -0.14;
 }
 
 
